--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -30,12 +30,34 @@ jobs:
 
       - name: Build
         run: npm run build
+        
+  test:
+    runs-on: ubuntu-22.04
+    env:
+      IMAGE_NAME: "front-image"
+      CONTAINER_NAME: "front-container"
+      CONTAINER_PORT: "4173"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: build image
+        run: docker image build --tag="${IMAGE_NAME}" ./web-project/
+      - name: run container
+        run: docker container run -d -p "${CONTAINER_PORT}":4173 --name "${CONTAINER_NAME}" "${IMAGE_NAME}"
+      - name: Wait container startup
+        run: sleep 5
+      - name: http test request
+        run: curl http://127.0.0.1:"${CONTAINER_PORT}"/
+      - name: stop container
+        run: docker container stop "${CONTAINER_NAME}"
+      - name: remove container
+        run: docker container rm "${CONTAINER_NAME}"
 
   package-and-deploy:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
 
-    needs: [build]
+    needs: [build, test]
 
     steps:
       - name: Checkout repository
