--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -56,9 +56,12 @@ jobs:
   package-and-deploy:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-
     needs: [build, test]
-
+    
+    permissions:
+      contents: read
+      packages: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -74,7 +77,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
