--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -13,6 +13,22 @@ env:
   ORGANIZATION: Hackathon-M1-AL
 
 jobs:
+  lint:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Hadolint
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: ./Dockerfile
+      - name: Setup Node
+        uses: actions/setup-node@v4
+      - name: Install dependencies
+        run: npm install
+      - name: Lint npm
+        run: npm run lint
+        
   build:
     runs-on: ubuntu-latest
 
@@ -20,6 +36,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Hadolint
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: ./Dockerfile
+          
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
