--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -30,6 +30,7 @@ jobs:
         run: npm run lint
         
   build:
+    needs: [lint]
     runs-on: ubuntu-latest
 
     steps:
@@ -53,6 +54,7 @@ jobs:
         run: npm run build
         
   test:
+    needs: [lint]
     runs-on: ubuntu-22.04
     env:
       IMAGE_NAME: "front-image"
